--- a/coupon-event/src/main/resources/templates/fragments/layout.html
+++ b/coupon-event/src/main/resources/templates/fragments/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
@@ -21,16 +21,13 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="/home">Home</a>
-          <!--<a class="nav-link" th:classappend="${#httpServletRequest.requestURI.startsWith('/home') ? 'active' : ''}" href="/home">Home</a>-->
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/promotions">Promotion</a>
-          <!--<a class="nav-link" th:classappend="${#httpServletRequest.requestURI.startsWith('/promotions') ? 'active' : ''}" href="/categories">카테고리</a>-->
         </li>
-        <li class="nav-item" sec:authorize="!isAuthenticated()"><a href="/login" class="nav-link" >로그인</a></li>
-<!--        <li class="nav-item" sec:authorize="hasRole('ADMIN')"><a href="/admin/main" class="nav-link" >관리자</a></li>-->
-<!--        <li class="nav-item" sec:authorize="isAuthenticated()"><a href="/my/main" class="nav-link" sec:authentication="principal.username">사용자</a></li>-->
-<!--        <li class="nav-item" sec:authorize="isAuthenticated()"><a th:href="@{/logout}" class="nav-link" href="/logout">로그아웃</a></li>-->
+        <li class="nav-item"><a href="/login" class="nav-link" >로그인</a></li>
+        <li class="nav-item" ><a href="/my/main" class="nav-link">마이페이지</a></li>
+        <li class="nav-item"><a th:href="@{/logout}" class="nav-link" href="/logout">로그아웃</a></li>
       </ul>
     </div>
   </div>
