--- a/coupon-event/src/main/resources/templates/my/couponDetail.html
+++ b/coupon-event/src/main/resources/templates/my/couponDetail.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="|쿠폰 상세: ${coupon.couponId}|">쿠폰 상세</title>
-    <th:block th:replace="fragments/layout :: cssjs"/>
+    <th:block th:replace="~{fragments/layout :: cssjs}"/>
 </head>
 <body>
 
-<div th:replace="fragments/layout :: header"></div>
+<div th:replace="~{fragments/layout :: header}"></div>
 
 <div class="container">
     <h2>쿠폰 상세</h2>
@@ -38,7 +38,7 @@
     <a class="btn btn-dark" href="/home" role="button">첫 화면으로 이동하기</a>
 </div>
 
-<div th:replace="fragments/layout :: footer"></div>
+<div th:replace="~{fragments/layout :: footer}"></div>
 
 
 </body>
