feat: coupon 발급

--- a/coupon-event/src/main/resources/templates/promotion/promotionDetail.html
+++ b/coupon-event/src/main/resources/templates/promotion/promotionDetail.html
@@ -20,6 +20,8 @@
                         상세 : <span th:text="${promotion.context}"></span>
                         <br>
                         수량 : <span th:text="${promotion.quantity}"></span>
+                        <br>
+                        잔여 수량 : <span th:text="${stock}"></span>
                     </p>
                     <button type="button" class="btn btn-primary" id="joinPromotion">쿠폰발급</button>
             </div>
