--- a/coupon-event/src/main/resources/templates/loginHome.html
+++ b/coupon-event/src/main/resources/templates/loginHome.html
@@ -13,9 +13,9 @@
 
 <div class="p-2 mb-2 bg-light rounded-3 mt-2">
     <div class="container-fluid py-5">
-        <h3 class="display-5 fw-bold">오늘의 특가</h3>
+        <h3 class="display-5 fw-bold">오늘의 프로모션</h3>
         <p class="col-md-8 fs-4">라즈베리파이 3</p>
-        <a class="btn btn-primary btn-lg" type="button" href="/products/prod-001">상품 보기</a>
+        <a class="btn btn-primary btn-lg" type="button" href="/promotion/promotion1">프로모션 보기</a>
     </div>
 </div>
 
