fix: sonar code smells

--- a/coupon-event/src/main/resources/templates/promotion/promotionDetail.html
+++ b/coupon-event/src/main/resources/templates/promotion/promotionDetail.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div th:replace="~{/fragments/layout :: header}"></div>
+<div th:replace="~{fragments/layout :: header}"></div>
 
 <div class="container">
     <div class="row">
@@ -38,7 +38,7 @@
     </div>
 </div>
 
-<div th:replace="~{/fragments/layout :: footer}"></div>
+<div th:replace="~{fragments/layout :: footer}"></div>
 
 <script th:inline="javascript">
     document.querySelector("#joinPromotion").addEventListener("click", (e) =>{
