fix: 쿠폰 발급 요청 동기 처리

--- a/coupon-event/src/main/resources/templates/promotion/promotionDetail.html
+++ b/coupon-event/src/main/resources/templates/promotion/promotionDetail.html
@@ -45,7 +45,7 @@
         const pId = document.querySelector("#promotionId").value;
         const mId = document.querySelector("#memberId").value;
 
-        fetch(`/promotions`, {
+        fetch(`/coupons`, {
             method: "PATCH",
             headers: {
                 "Content-Type": "application/json; charset=UTF-8",
